# rest-api-rust

./: .env  Cargo.toml  README.md
src/: main.rs
src/api/: mod.rs  todo.rs
src/api/routes/: restaurant.rs  user.rs
src/database/: mod.rs  mongodb_connector.rs  todo.rs
src/models/: restaurant.rs  user.rs
src/utils/: auth.rs
