[package]
name = "restapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
serde = { version = "1.0.194" }
serde_json = "1.0.110"
mongodb = "2.8.0"
lazy_static = "1.4"
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
actix-multipart = "0.6.1"
validator = { version = "0.16.1", features = ["derive"] }
env_logger = "0.10.1"
bcrypt = "0.15.0"
cargo-watch = "8.4.1"

[dev-dependencies]
cargo-watch = "8.5.2"
